<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="title_activity_main">Weather Forecast</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cities_search">City</string>
    <string name="city_name">Barcelona</string>
    <string name="temperature">18º</string>
    <string name="weather_description">Sunny</string>
    <string name="max_temperature">Max</string>
    <string name="max_temperature_value">21º</string>
    <string name="min_temperature">Min</string>
    <string name="min_temperature_value">13º</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="humidity_value">54%</string>
    <string name="wind_value">17 km/h</string>
    <string name="weather_icon">weather icon</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="weather_details">Details</string>
    <string name="weather_maps">Maps</string>
    <string name="add_city_button">add_city_button</string>
    <string name="city_search_hint">Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="real_feel_text">Real feel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>10 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>600</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="current_weather">Current weather</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="precipit_ations">Precipit ations</string>
    <string name="precipitations">Precipitations</string>
    <string name="last_updated">Last updated</string>
    <string name="no_location_detected">No location found</string>
    <string name="last_updated_text">Last updated</string>
    <string name="city_duplicate">The city is already in the list</string>
    <string name="edit_places">Edit places</string>
    <string name="about">About</string>
    <string name="moved">City moved</string>
    <string name="itemdeleted">City deleted</string>
    <string name="taptoundo">Undo</string>
    <string name="interntet_error">Internet connection not available</string>
    <string name="apixu_errpr">Weather information could not be retrieved</string>
    <string name="edit_places_activity">Edit Places</string>
    <string name="humidityText">Humidity</string>
    <string name="wind_text">Wind</string>
    <string name="cloudtext">Clouds</string>
    <string name="precipText">Precipitations</string>
    <string name="pressureText">Pressure</string>
    <string name="moonriseset">Moonrise/Moonset</string>
    <string name="sunriseset">Sunrise/Sunset</string>
    <string name="temperatureDetail">Temperature</string>
    <string name="precipitationDetail">Precipitation</string>
    <string name="dew_point">Dew point</string>
    <string name="title_activity_detailed_daily_forecast">DetailedDailyForecast</string>
    <string name="title_activity_maps">Map</string>

    <string name="eather_notification_title_template">Eather: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="eather_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="static_notification">Static notification</string>
    <string name="weather_notification">Weather notification</string>
    <string name="next_city">Next city</string>
</resources>
