<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/mainInfoLayout">

    <android.support.v7.widget.CardView
        android:id="@+id/mainInfoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8sp"
            android:layout_marginEnd="8sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_weather"
                android:id="@+id/currentWeather"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/temperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                android:layout_below="@+id/currentWeather"
                android:layout_alignStart="@+id/currentWeather" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/temperatureText"
                android:layout_below="@+id/temperatureText"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/maxTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_temperature"
                android:layout_below="@+id/realFeelText"
                android:layout_alignStart="@+id/descriptionText"
                android:layout_marginTop="7dp" />

            <TextView
                android:id="@+id/minTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/min_temperature"
                android:layout_alignTop="@+id/maxTempText"
                android:layout_toEndOf="@+id/maxTempValue" />

            <TextView
                android:id="@+id/minTempValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_alignTop="@+id/minTempText"
                android:layout_toEndOf="@+id/minTempText"
                android:layout_marginStart="5dp" />


            <ImageView
                android:id="@+id/weatherIconMain"
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:contentDescription="@string/weather_icon"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/maxTempValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:layout_alignTop="@+id/maxTempText"
                android:layout_toEndOf="@+id/maxTempText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/realFeelValue"
                android:layout_alignBaseline="@+id/realFeelText"
                android:layout_alignBottom="@+id/realFeelText"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/realFeelText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_feel_text"
                android:id="@+id/realFeelText"
                android:layout_alignStart="@+id/descriptionText"
                android:layout_below="@+id/descriptionText"
                android:layout_marginTop="10dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>