<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:id="@+id/swiperefresh"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                              tools:context="com.example.oriolgasset.weatherforecast.MainActivity"
                                              tools:showIn="@layout/app_bar_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1F2F7"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <include
                android:id="@+id/mainInfoCardView"
                layout="@layout/main_weather_info_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/hourlyForecastCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainInfoCardView"
                android:layout_marginTop="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingEnd="10sp"
                    android:paddingStart="10sp">

                    <TextView
                        android:id="@+id/hourlyForecastText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8sp"
                        android:layout_marginTop="10sp"
                        android:scrollbars="none"
                        android:text="@string/hourly_forecast"
                        android:textColor="@color/secondary_text"
                        android:textSize="20sp"/>

                    <View
                        android:id="@+id/hourlyDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/hourlyForecastText"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="2sp"
                        android:background="@color/divider"
                        android:paddingBottom="10sp"
                        android:paddingTop="2sp"/>

                    <HorizontalScrollView
                        android:id="@+id/hourlyHorizontalScrollView"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/hourlyDivider"
                        android:layout_marginRight="10sp"
                        android:fillViewport="false"
                        android:scrollbars="none">

                        <LinearLayout
                            android:id="@+id/hourlyParentLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:dividerPadding="5sp"
                            android:orientation="horizontal"
                            android:scrollbars="none">

                        </LinearLayout>
                    </HorizontalScrollView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dailyForecastCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hourlyForecastCardView"
                android:layout_marginTop="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingEnd="10sp"
                    android:paddingStart="10sp">

                    <TextView
                        android:id="@+id/dailyForecastText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8sp"
                        android:layout_marginTop="10sp"
                        android:text="@string/daily_forecast"
                        android:textColor="@color/secondary_text"
                        android:textSize="20sp"/>

                    <View
                        android:id="@+id/dailyDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/dailyForecastText"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="2sp"
                        android:background="@color/divider"
                        android:paddingBottom="2sp"
                        android:paddingTop="10sp"/>

                    <HorizontalScrollView
                        android:id="@+id/dailyHorizontalScrollView"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_below="@id/dailyDivider"
                        android:scrollbars="none">

                        <LinearLayout
                            android:id="@+id/dailyParentLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:divider="@color/primary"
                            android:dividerPadding="5dp"
                            android:orientation="horizontal">

                        </LinearLayout>
                    </HorizontalScrollView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/detailsForecastCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dailyForecastCardView"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/detailedWeatherLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="false"
                    android:paddingEnd="10sp"
                    android:paddingStart="10sp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="8sp"
                        android:text="@string/weather_details"
                        android:textColor="@color/secondary_text"
                        android:textSize="20sp"/>

                    <View
                        android:id="@+id/detailsDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/textView"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="2sp"
                        android:background="@color/divider"
                        android:paddingBottom="2sp"
                        android:paddingTop="10sp"/>


                    <include
                        android:id="@+id/humidityDetail"
                        layout="@layout/weather_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detailsDivider"
                        android:layout_marginTop="10sp"
                        android:layout_marginLeft="5sp"/>

                    <include
                        android:id="@+id/windDetail"
                        layout="@layout/weather_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/humidityDetail"
                        android:layout_marginTop="10sp"
                        android:layout_marginLeft="5sp"/>

                    <include
                        android:id="@+id/pressureDetail"
                        layout="@layout/weather_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/windDetail"
                        android:layout_marginTop="10sp"
                        android:layout_marginLeft="5sp"/>

                    <include
                        android:id="@+id/cloudsDetail"
                        layout="@layout/weather_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pressureDetail"
                        android:layout_marginTop="10sp"
                        android:layout_marginLeft="5sp"/>

                    <include
                        android:id="@+id/precipitationsDetail"
                        layout="@layout/weather_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cloudsDetail"
                        android:layout_marginTop="10sp"
                        android:layout_marginLeft="5sp"
                        android:layout_marginBottom="10sp"/>


                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/mapForecastCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailsForecastCardView"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="false"
                    android:layout_marginBottom="8sp"
                    android:paddingEnd="10sp"
                    android:paddingStart="10sp">

                    <TextView
                        android:id="@+id/mapText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="8sp"
                        android:text="@string/weather_maps"
                        android:textColor="@color/secondary_text"
                        android:textSize="20sp"/>

                    <View
                        android:id="@+id/mapsDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/mapText"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="2sp"
                        android:background="@color/divider"
                        android:paddingBottom="2sp"
                        android:paddingTop="10sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>